# zwifty-packets

./: .gitignore  README.md  TestHarness.py  ZwiftPacketMonitor.py  monitor.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  zwifty-packets.code-workspace  zwifty-packets.pyproj  zwifty-packets.sln
src/zwiftpktmon/: __init__.py  async_monitor.py  events.py  zwift_messages_pb2.py
tests/: TestHarness.py  ZwiftPacketMonitor.py  context.py  test_harness.py  test_harness_ui.py
windows/: pcapy.cp38-win_amd64.pyd
zpm/: ZwiftPacketMonitor.py  __init__.py  async_monitor.py  events.py  monitor.py
zpm/protobuf/: __init__.py  zwift_messages.proto
zpm/test/: TestHarness.py
