# python -m build
[metadata]
name = zwifty-packets
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentdavis/zwifty-packets
project_urls =
    Bug Tracker = https://github.com/vincentdavis/zwifty-packets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = zpm
packages = find:
python_requires = >=3.10

install_requires = 
    protobuf >= 3.19.4

[options.packages.find]
where = zpm
