# python -m build
[metadata]
name = zwiftpktmon
version = 0.0.1
author = Kevin Ruff
author_email = ruff.kevin@outlook.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentdavis/zwifty-packets
project_urls =
    Bug Tracker = https://github.com/vincentdavis/zwifty-packets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.10

install_requires = 
    protobuf >= 3.19.4
    pcapy-ng-win-amd64 >= 1.0.4; platform_system == "Windows"
    pcapy-ng-macos >= 1.0.4; platform_system == "Darwin"

[options.packages.find]
where = src
include = zwiftpktmon

